# adventofcode2020

./: .gitignore
day1/: day1.ts
day2/: day2.ts
day3/: day3.ts
day4/: day4.ts  package.json
day5/: Cargo.toml
day5/src/: day5.rs
day6/: Cargo.toml
day6/src/: day6.rs
day7/: Cargo.toml
day7/src/: day7.rs
